--- a/res/runner.plist
+++ b/res/runner.plist
@@ -4,7 +4,7 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>1.png</key>
+            <key>p1.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{380,2},{116,193}}</string>
@@ -17,7 +17,7 @@
                 <key>sourceSize</key>
                 <string>{200,267}</string>
             </dict>
-            <key>2.png</key>
+            <key>p2.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{197,2},{116,181}}</string>
@@ -30,7 +30,7 @@
                 <key>sourceSize</key>
                 <string>{200,267}</string>
             </dict>
-            <key>3.png</key>
+            <key>p3.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,120},{124,207}}</string>
@@ -43,7 +43,7 @@
                 <key>sourceSize</key>
                 <string>{200,267}</string>
             </dict>
-            <key>4.png</key>
+            <key>p4.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{211,120},{124,195}}</string>
@@ -56,7 +56,7 @@
                 <key>sourceSize</key>
                 <string>{200,267}</string>
             </dict>
-            <key>5.png</key>
+            <key>p5.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{2,2},{116,193}}</string>
@@ -69,7 +69,7 @@
                 <key>sourceSize</key>
                 <string>{200,267}</string>
             </dict>
-            <key>6.png</key>
+            <key>p6.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{575,2},{120,181}}</string>
@@ -82,7 +82,7 @@
                 <key>sourceSize</key>
                 <string>{200,267}</string>
             </dict>
-            <key>7.png</key>
+            <key>p7.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{595,124},{126,201}}</string>
@@ -95,7 +95,7 @@
                 <key>sourceSize</key>
                 <string>{200,267}</string>
             </dict>
-            <key>8.png</key>
+            <key>p8.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{408,124},{124,185}}</string>
